<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_trainer_navigation"
    app:startDestination="@+id/navigation_trainer_profile">

    <fragment
        android:id="@+id/navigation_trainer_profile"
        android:name="com.example.bottomnav.TrainerProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_trainer_profile" />

    <fragment
        android:id="@+id/navigation_trainer_workout"
        android:name="com.example.bottomnav.TrainerWorkoutFragment"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_trainer_workout" />

    <fragment
        android:id="@+id/navigation_trainer_bmi"
        android:name="com.example.bottomnav.TrainerBMIFragment"
        android:label="@string/title_bmi"
        tools:layout="@layout/fragment_trainer_bmi" />

    <fragment
        android:id="@+id/navigation_trainer_diet"
        android:name="com.example.bottomnav.TrainerDietFragment"
        android:label="@string/title_diet"
        tools:layout="@layout/fragment_trainer_diet" />
</navigation>